fix java8 issue black oil